--- a/Lesson 2/Lesson/tom05.10/tom.html
+++ b/Lesson 2/Lesson/tom05.10/tom.html
@@ -49,7 +49,10 @@
                     <a href="#work-section">
                         <div>Work</div>
                     </a>
-                    <div>Testimonials</div>
+                    <a href="#skills">
+                        <div>Testimonials</div>
+                    </a>
+
                     <a href="#contact-section">
                         <div>Contact</div>
                     </a>
@@ -155,7 +158,7 @@
         </div>
     </div>
     <div class="out-container">
-        <div class="container3 flex column">
+        <div class="container3 flex column" id="skills">
             <div class="flex" style="justify-content: center; align-items: center; font-size: 14px;">
                 <div>Skills</div>
             </div>
