--- a/Lesson 2/Lesson/tom05.10/tom.html
+++ b/Lesson 2/Lesson/tom05.10/tom.html
@@ -25,7 +25,7 @@
                         <div><img src="./icons/switchbtn.png" alt=""></div>
                     </div>
                     <div class="flex">
-                        Download CVVB
+                        Download CV
                     </div>
                 </div>
             </div>
