--- a/dom/picture.html
+++ b/dom/picture.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Carousel</title>
+    <title>Image Changer</title>
     <link rel="stylesheet" href="./picture.css">
 </head>
 
@@ -12,12 +12,20 @@
     <div class="container">
         <button class="btn1">Pre</button>
         <div class="img-container">
+            <img src="./img/Rectangle 1 .png" alt="">
             <img src="./img/none.png" alt="">
             <img src="./img/Rectangle 1 (1).png" alt="">
             <img src="./img/Rectangle 1 (2).png" alt="">
             <img src="./img/Rectangle 1 .png" alt="">
+            <img src="./img/none.png" alt="">
         </div>
         <button class="btn2">Next</button>
+    </div>
+    <div class="circle-container">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
     </div>
 
     <script src="./picture.js"></script>
