--- a/dom/picture.html
+++ b/dom/picture.html
@@ -12,16 +12,16 @@
     <div class="container">
         <button class="btn1">Pre</button>
         <div class="img-container">
-            <img src="./img/Rectangle 1 .png" alt="">
-            <img src="./img/none.png" alt="">
-            <img src="./img/Rectangle 1 (1).png" alt="">
-            <img src="./img/Rectangle 1 (2).png" alt="">
-            <img src="./img/Rectangle 1 .png" alt="">
-            <img src="./img/none.png" alt="">
+            <img src="./img/1.jpg" alt="">
+            <img src="./img/2.jpg" alt="">
+            <img src="./img/3.jpg" alt="">
+            <img src="./img/4.jpg" alt="">
+            <img src="./img/5.jpg" alt="">
         </div>
         <button class="btn2">Next</button>
     </div>
     <div class="circle-container">
+        <div class="circle"></div>
         <div class="circle"></div>
         <div class="circle"></div>
         <div class="circle"></div>
