--- a/form/form1.html
+++ b/form/form1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real one</title>
+    <title>Form1</title>
     <link rel="stylesheet" href="./form1.css">
     <script src="https://kit.fontawesome.com/084ff913dd.js" crossorigin="anonymous"></script>
 </head>
@@ -26,11 +26,11 @@
                     <input type="password" placeholder="   Password">
                 </div>
                 <div>Forgot your password?</div>
-                <button class="signin-btn">SIGN IN</button>
+                <button class="signin-btn">Нэвтрэх</button>
             </div>
 
             <div class="sign" id="sign2">
-                <h1>Sign Up</h1>
+                <h1>Бүртгүүлэх</h1>
                 <div class="icons flex">
                     <div><i class="fa-brands fa-instagram"></i></div>
                     <div><i class="fa-brands fa-google"></i></div>
@@ -43,18 +43,18 @@
                     <input type="text" placeholder="  Email">
                     <input type="password" placeholder="   Password">
                 </div>
-                <button class="signin-btn">SIGN UP</button>
+                <button class="signin-btn">Бүртгүүлэх</button>
             </div>
         </div>
         <div class="hello1 hello" id="signin-tab">
             <h1>Welcome Back!</h1>
             <p>Please login with your personal info</p>
-            <button class="signup-btn" id="signin">SIGN IN</button>
+            <button class="signup-btn" id="signin">Нэвтрэх</button>
         </div>
         <div class="hello2 hello" id="signup-tab">
             <h1>Hello, Friend!</h1>
             <p>Enter your personal details and start your journey with us</p>
-            <button class="signup-btn" id="signup">SIGN UP</button>
+            <button class="signup-btn" id="signup">Бүртгүүлэх</button>
         </div>
         <!-- <div class="container2 flex">
             <div class="hello" id="signin-tab">
