--- a/form/form.html
+++ b/form/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form0</title>
     <link rel="stylesheet" href="./form.css">
     <script src="https://kit.fontawesome.com/084ff913dd.js" crossorigin="anonymous"></script>
 </head>
