--- a/homeworks/namu.html
+++ b/homeworks/namu.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namu Mongolia</title>
     <link rel="stylesheet" href="./namu.css">
+    <script src="https://kit.fontawesome.com/084ff913dd.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="out-container">
         <div class="navbar flex">
@@ -22,7 +28,7 @@
                     </div>
                     <div>
                         <div><img src="./img namu/cart.png" alt=""></div>
-                        <div>Захиалга</div>
+                        <div>Захиалга </div>
                     </div>
                 </div>
                 <div class="flex" style="gap: 24px;">
@@ -31,6 +37,32 @@
                 </div>
             </div>
         </div>
-    </div>    
+        <div class="container2">
+            <div class="container2-fullimg">
+                <div class="container2-fullimg-img1">
+                    <img src="./img namu/image 10.png" alt="">
+                    <div class="container2-fullimg-img1-text">
+                        <h1>Яг одоо захиалаад авах.</h1>
+                        <button>Захиалах <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+                <div class="container2-fullimg-img2">
+                    <img src="./img namu/11.png" alt="">
+                    <div class="container2-fullimg-img2-text">
+                        <h1>All lattes 20% OFF speciol orders</h1>
+                        <button>Захиалах <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+                <div class="container2-fullimg-img3">
+                    <img src="./img namu/12.png" alt="">
+                    <div class="container2-fullimg-img3-text">
+                        <h1 style="color: black;">10 аваад 1-ийг бэлгэнд.</h1>
+                        <button>Захиалах <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
