--- a/homeworks/namu.html
+++ b/homeworks/namu.html
@@ -62,6 +62,63 @@
                 </div>
             </div>
         </div>
+        <div class="container3" >
+            <div class="container3-inner" >
+                <div class=" flex" style="position: relative;">
+                    <img src="./img namu/iced_mocha-removebg-preview 1.png" style="width: 446px; height: 442px; position: absolute; left: -34px; top: 36px; z-index: 1;" alt="">
+                    <img src="./img namu/Homescreen-portrait 1.png" style="width: 206.1px; height: 411px; position: absolute; left: 217px; top: 36px; z-index: 2;" alt="">
+                    <img src="./img namu/10-removebg-preview 1.png" style="width: 389px; height: 389px; position: absolute; left: 277px; top: 107px; z-index: 1;" alt="">
+                    <img src="./img namu/star.png" style="width: 44.39px; height:42.31px; position: absolute; left: 159.62px; top: 48px; z-index: 1;" alt="">
+                    <img src="./img namu/star (1).png" style="width: 54.66px; height:52.1px; position: absolute; left: 500.41px; top: 90.93px; z-index: 1;" alt="">
+                    <img src="./img namu/star (2).png" style="width: 44.39px; height:42.31px; position: absolute; left: 442.24px; top: 145.54px; z-index: 1;" alt="">
+
+                </div>
+                <div class="flex column" style="justify-content: space-evenly; padding-left: 55px;">
+                    <div style="color: rgba(170, 113, 74, 1); font-size: 32px; font-weight: 700; width: 329px;">Үнэгүй кофе авахад 
+                        илүү амар боллоо.
+                    </div>
+                    <div style="font-size: 20px; color:rgba(0, 0, 0, 1); font-weight: 500px; width: 419px;">Coffee namu app -Урамшууллын апп татаж аваад, дуртай зүйлээ хаанаас ч, хэзээ ч хамаагүй захиалаарай.</div>
+                    <button>Захиалах <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </div>
+        <div class="container4" style="display: flex; flex-direction: column; gap: 54px; padding-bottom: 92px;">
+            <div style="margin: auto; display: flex; flex-direction: column; gap: 19px;">
+                <div style=" font-size: 32px; font-weight: 600; margin-left: 24px; ">Онцлох бүтээгдхүүн</div>
+                <div style="font-size: 16px; font-weight: 500;">Энэ сарын онцлох, дуусахаас өмнө захиалаарай!</div>
+            </div>
+            <div style="display: flex; gap: 20px; margin: auto;">
+                <img src="./img namu/cart (1).png" alt="" style=" width: 305px; height: 330px;">
+                <img src="./img namu/cart (2).png" alt="" style=" width: 305px; height: 330px;">
+                <img src="./img namu/cart (3).png" alt="" style=" width: 305px; height: 330px;">
+                <img src="./img namu/cart (4).png" alt="" style=" width: 305px; height: 330px;">
+            </div>
+        </div>
+        <div style="background-color: rgba(248, 241, 231, 1); display: flex; padding: 50px 80px;">
+            <div style="flex: 2; display: flex; gap: 20px; flex-direction: column;">
+                <img src="./img namu/Brand Logo.png" alt="" style="width: 213px; height: 62px;">
+                <p style="margin-left: 68px;">Утас: (976)7772-4422</p>
+                <p style="margin-left: 68px;">coffeenamumongolia@gmail.com</p>
+                <div style="margin-left: 68px; margin-top: 56px;">
+                    <img src="./img namu/icon 1.png" alt="">
+                    <img src="./img namu/icon 2.png" alt="">
+                    <img src="./img namu/icon 3.png" alt="">
+                    <img src="./img namu/Button Text.png" alt="">
+                </div>
+            </div>
+            <div style="flex: 1; display: flex; flex-direction: column; gap: 12px; color: rgba(40, 40, 42, 1);">
+                <h1>Бидний тухай</h1>
+                <h3>>  Байгууллага</h3>
+                <h3>>  Бүтээгдхүүн</h3>
+            </div>
+            <div style="flex: 1; display: flex; flex-direction: column; gap: 12px; color: rgba(40, 40, 42, 1);">
+                <h1>Захиалга</h1>
+                <h3>>  Аппликэйшн</h3>
+                <h3>>  Урамшуулал</h3>
+                <h3>>  Салбарууд</h3>
+            </div>
+
+        </div>
     </div>
 </body>
 
