--- a/gert0430/04.26/gogo.html
+++ b/gert0430/04.26/gogo.html
@@ -321,7 +321,8 @@
                             <div>КоллПро ХХК ENTEC 24 үйл ажиллагааг амжилттай зохион байгууллаа</div>
                             <div>ККоллПро компани 10 жилийн ойгоо тохиолдуулан ENTEC 24 - Enterprise Telecom Conference
                                 үйл ажиллагааг “Харилцагчийн амжилт, хамтын өсөлт” уриан дор амжилттай зохион
-                                байгууллаа.</div>
+                                байгууллаа.
+                            </div>
                             <div>
                                 <div>
                                     <i class="fa-solid fa-share"></i>
