--- a/homeworks/travelmoto/travel.html
+++ b/homeworks/travelmoto/travel.html
@@ -16,21 +16,14 @@
     <div class="out-container" style="width: 1512px; margin: auto">
       <div class="container1" style="width: 1512px; margin: auto">
         <img src="./travelimg/Component.png" alt="" />
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            z-index: 5;
-          "
-        >
+        <div class="container1-text">
           <div
             style="
+              padding-top: 132px;
               display: flex;
+              justify-content: center;
               gap: 41px;
               font-size: 18px;
-              color: rgba(255, 255, 255, 1);
-              justify-content: center;
               font-weight: 400;
             "
           >
@@ -39,28 +32,8 @@
             <div>CONTUCT US</div>
             <div>HELP CENTER</div>
           </div>
-          <div
-            style="
-              display: flex;
-              gap: 41px;
-              font-size: 18px;
-              color: rgba(255, 255, 255, 1);
-              justify-content: center;
-              font-weight: 400;
-            "
-          >
-            Sands of Gobi Gobi Desert, Mongolia
-          </div>
-          <div
-            style="
-              display: flex;
-              gap: 41px;
-              font-size: 18px;
-              color: rgba(255, 255, 255, 1);
-              justify-content: center;
-              font-weight: 400;
-            "
-          >
+          <div>Sands of Gobi Gobi Desert, Mongolia</div>
+          <div>
             <div>FROM</div>
             <div>€2.390</div>
           </div>
